# aiogram3.x-template

./: .env.example  README.md  config.py  main.py  pyproject.toml
database/: models.py
handlers/: __init__.py
